# crypto-risk-monitor

./: .dockerignore  .env.example  .gitattributes  .gitignore  .vercelignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  run_local.ps1  stop_local.ps1
.github/workflows/: backfill-once.yml  backfill-volume.yml  ci.yml  cleanup.yml  collect.yml  migrate.yml
api/: index.py
app/: __init__.py  collector.py  config.py  db.py  main.py  models.py
app/api/: __init__.py  dependencies.py  routes.py  schemas.py
app/domain/: __init__.py  metrics.py  portfolio.py  rules.py
app/integrations/: __init__.py  binance.py  discord.py
app/services/: __init__.py  alerts.py  ingestion.py  portfolio.py  profiles.py  risk.py  simulator.py
docker/postgres/: init-roles.sh
docs/: DEPLOY.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_risk_profiles.py  0003_unique_risk_snapshots.py  0004_runtime_permissions.py  0005_persisted_risk_profile.py  0006_data_integrity_constraints.py  0007_polish_portuguese_labels.py  0008_public_simulator.py  0009_expand_public_assets.py
scripts/: __init__.py  backfill_quote_volume.py  bootstrap.py  cleanup_guest_portfolios.py  database_safety.py
tests/: conftest.py
tests/integration/: test_alert_lifecycle.py  test_api.py  test_collector.py  test_database.py  test_ingestion.py  test_web.py
tests/unit/: test_alerts.py  test_binance.py  test_candle_aggregation.py  test_collector_loop.py  test_config.py  test_database_safety.py  test_ingestion.py  test_metrics.py  test_portfolio.py  (+4 more)
(+5 files in other folders)
