[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-risk-monitor"
version = "0.1.0"
description = "Monitor explicavel de risco de mercado e portfolio em criptoativos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "itsdangerous>=2.2,<3",
    "jinja2>=3.1,<4",
    "numpy>=2.2,<3",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy>=2.0,<3",
    "starlette>=0.46,<1",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<10",
    "pytest-cov>=6,<8",
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
